[gd_scene load_steps=37 format=2]

[ext_resource path="res://assets/textures/enemies/cat/Idle (1).png" type="Texture" id=1]
[ext_resource path="res://entities/enemies/Cat.gd" type="Script" id=2]
[ext_resource path="res://entities/enemies/CatProjectile.tscn" type="PackedScene" id=3]
[ext_resource path="res://entities/enemies/DetectionArea.gd" type="Script" id=4]
[ext_resource path="res://assets/textures/green_circle.png" type="Texture" id=5]
[ext_resource path="res://assets/textures/enemies/cat/Idle (10).png" type="Texture" id=6]
[ext_resource path="res://assets/textures/enemies/cat/Idle (7).png" type="Texture" id=7]
[ext_resource path="res://assets/textures/enemies/cat/Idle (8).png" type="Texture" id=8]
[ext_resource path="res://assets/textures/enemies/cat/Idle (9).png" type="Texture" id=9]
[ext_resource path="res://assets/textures/enemies/cat/Idle (2).png" type="Texture" id=10]
[ext_resource path="res://assets/textures/enemies/cat/Idle (4).png" type="Texture" id=11]
[ext_resource path="res://assets/textures/enemies/cat/Idle (5).png" type="Texture" id=12]
[ext_resource path="res://assets/textures/enemies/cat/Idle (3).png" type="Texture" id=13]
[ext_resource path="res://assets/textures/enemies/cat/Idle (6).png" type="Texture" id=14]
[ext_resource path="res://assets/textures/enemies/cat/Jump (5).png" type="Texture" id=15]
[ext_resource path="res://assets/textures/enemies/cat/Jump (3).png" type="Texture" id=16]
[ext_resource path="res://assets/textures/enemies/cat/Jump (8).png" type="Texture" id=17]
[ext_resource path="res://assets/textures/enemies/cat/Jump (7).png" type="Texture" id=18]
[ext_resource path="res://assets/textures/enemies/cat/Jump (2).png" type="Texture" id=19]
[ext_resource path="res://assets/textures/enemies/cat/Jump (4).png" type="Texture" id=20]
[ext_resource path="res://assets/textures/enemies/cat/Jump (6).png" type="Texture" id=21]
[ext_resource path="res://assets/textures/enemies/cat/Jump (1).png" type="Texture" id=22]
[ext_resource path="res://assets/textures/enemies/cat/Dead (8).png" type="Texture" id=23]
[ext_resource path="res://assets/textures/enemies/cat/Dead (4).png" type="Texture" id=24]
[ext_resource path="res://assets/textures/enemies/cat/Dead (7).png" type="Texture" id=25]
[ext_resource path="res://assets/textures/enemies/cat/Dead (9).png" type="Texture" id=26]
[ext_resource path="res://assets/textures/enemies/cat/Dead (6).png" type="Texture" id=27]
[ext_resource path="res://assets/textures/enemies/cat/Dead (5).png" type="Texture" id=28]
[ext_resource path="res://assets/textures/enemies/cat/Dead (10).png" type="Texture" id=29]
[ext_resource path="res://assets/textures/enemies/cat/Dead (1).png" type="Texture" id=30]
[ext_resource path="res://assets/textures/enemies/cat/Dead (3).png" type="Texture" id=31]
[ext_resource path="res://assets/textures/enemies/cat/Dead (2).png" type="Texture" id=32]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 10 ), ExtResource( 13 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 14 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 6 ) ],
"loop": true,
"name": "idle",
"speed": 24.0
}, {
"frames": [ ExtResource( 30 ), ExtResource( 32 ), ExtResource( 31 ), ExtResource( 24 ), ExtResource( 28 ), ExtResource( 27 ), ExtResource( 25 ), ExtResource( 23 ), ExtResource( 26 ), ExtResource( 29 ) ],
"loop": false,
"name": "dead",
"speed": 24.0
}, {
"frames": [ ExtResource( 22 ), ExtResource( 19 ), ExtResource( 16 ), ExtResource( 20 ), ExtResource( 15 ), ExtResource( 21 ), ExtResource( 18 ), ExtResource( 17 ), ExtResource( 1 ) ],
"loop": false,
"name": "spit",
"speed": 24.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 15.5511, 47.422 )

[sub_resource type="CircleShape2D" id=3]
radius = 328.39

[sub_resource type="Animation" id=4]
resource_name = "remove"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Body:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.266352, 0.288347 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 4.33561, -14.8775 ), Vector2( 4.33561, 46.1225 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_remove"
} ]
}

[node name="Cat" type="RigidBody2D"]
collision_layer = 4
collision_mask = 5
script = ExtResource( 2 )
projectile_scene = ExtResource( 3 )

[node name="FireTimer" type="Timer" parent="."]
one_shot = true

[node name="FirePosition" type="Position2D" parent="."]
position = Vector2( 9.6885, -4.9261 )

[node name="RayCast2D" type="RayCast2D" parent="FirePosition"]
enabled = true
cast_to = Vector2( 0, 0 )
collision_mask = 3

[node name="Body" type="AnimatedSprite" parent="."]
position = Vector2( 4.33561, -14.8775 )
scale = Vector2( 0.266352, 0.288347 )
frames = SubResource( 1 )
animation = "idle"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.247452, 0.0067749 )
shape = SubResource( 2 )

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
script = ExtResource( 4 )

[node name="green_circle" type="Sprite" parent="DetectionArea"]
modulate = Color( 1, 1, 1, 0.301961 )
scale = Vector2( 1.3, 1.3 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource( 3 )

[node name="RemoveAnimPlayer" type="AnimationPlayer" parent="."]
anims/remove = SubResource( 4 )
[connection signal="animation_finished" from="Body" to="." method="_on_Body_animation_finished"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_DetectionArea_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_DetectionArea_body_exited"]
